--- a/package.json
+++ b/package.json
@@ -8,9 +8,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/modal": "^1.10.4",
+    "@chakra-ui/react": "^1.8.1",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@reduxjs/toolkit": "^1.7.1",
+    "axios": "^0.25.0",
+    "framer-motion": "^5.6.0",
+    "lodash": "^4.17.21",
     "next": "12.0.9",
+    "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hot-toast": "^2.2.0",
+    "react-redux": "^7.2.6"
   },
   "devDependencies": {
     "@types/node": "17.0.13",
