--- a/package.json
+++ b/package.json
@@ -8,20 +8,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/modal": "^1.10.4",
-    "@chakra-ui/react": "^1.8.1",
+    "@chakra-ui/icons": "^1.1.5",
+    "@chakra-ui/react": "^1.8.3",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@hookform/resolvers": "^2.8.8",
     "@reduxjs/toolkit": "^1.7.1",
+    "@types/debounce": "^1.2.1",
     "axios": "^0.25.0",
+    "debounce": "^1.2.1",
     "framer-motion": "^5.6.0",
-    "lodash": "^4.17.21",
     "next": "12.0.9",
     "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.26.1",
     "react-hot-toast": "^2.2.0",
-    "react-redux": "^7.2.6"
+    "react-redux": "^7.2.6",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "17.0.13",
