--- a/package.json
+++ b/package.json
@@ -13,18 +13,25 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@hookform/resolvers": "^2.8.8",
+    "@next/bundle-analyzer": "^12.1.0",
     "@reduxjs/toolkit": "^1.7.1",
+    "@sindresorhus/slugify": "^2.1.0",
     "@types/debounce": "^1.2.1",
     "axios": "^0.25.0",
+    "chakra-ui-markdown-renderer": "^4.0.0",
     "debounce": "^1.2.1",
+    "firebase": "^9.6.7",
     "framer-motion": "^5.6.0",
     "next": "12.0.9",
+    "next-redux-cookie-wrapper": "^2.1.2",
     "next-redux-wrapper": "^7.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.26.1",
     "react-hot-toast": "^2.2.0",
+    "react-markdown": "^8.0.0",
     "react-redux": "^7.2.6",
+    "react-use": "^17.3.2",
     "yup": "^0.32.11"
   },
   "devDependencies": {
